# comicseer-desktop

./: .gitignore  README.md  TRANSLATIONS.md
.github/workflows/: codeql-analysis.yml
changelog/: changelog  changelog.Debian
doc/: copyright  qtcopyright
doc/Environment/: Building.txt  LinuxEnvironment.txt
include/: unrar.h
installs/linux/: build_all.sh  build_deb.sh  build_deploy_translations.py  delete_all_svn_dirs  set_control_version.py
installs/win32/: BuildWin32.bat  BuildWin32.lnk  WindowsDesktop.sln  WindowsDesktop.vdproj
lib/win32/: XComicLibrary.lib  XMinizip.lib  XMinizipD.lib  XUnrar.lib  XUnrarD.lib  gtest_main.lib  gtest_mainD.lib  libboost_filesystem-vc100-mt-1_50.lib  libboost_filesystem-vc120-mt-1_60.lib  libboost_system-vc100-mt-1_50.lib  libboost_system-vc100-mt-gd-1_50.lib  libboost_system-vc120-mt-1_60.lib  libboost_system-vc120-mt-gd-1_60.lib  zlib.lib  zlibstatic.lib
lib/win64/: gtest.lib  gtest_main.lib  gtest_mainD.lib  zlib.lib  zlibstatic.lib
src/: qbuild.pri
src/ComicDesktop/: AboutBox.cpp  AboutBox.h  AboutBox.ui  AboutView.cpp  AboutView.h  AboutView.ui  AppQuickstartBrowser.cpp  AppQuickstartBrowser.h  BookmarkViewContent.cpp  BookmarkViewContent.h  BookmarkViewContent.ui  Browser.ui  BrowserContent.cpp  BrowserContent.h  BusyIndicator.cpp  BusyIndicator.h  BusyIndicator.ui  ColorPicker.cpp  ColorPicker.h  ComicAppNotification.cpp  ComicAppNotification.h  (+66 more)
src/Minizip/: CMakeLists.txt  FileFormatMinizipException.cpp  FileFormatMinizipException.h  Minizip.pro  XZip.cpp  XZip.hpp  fopen.cpp  ioapi.c  miniunz.c
(+92 files in other folders)
